stateDiagram-v2
  [*] --> NEW
  NEW --> CLASSIFIED
  NEW --> BLOCKED
  CLASSIFIED --> ROUTED
  CLASSIFIED --> BLOCKED
  ROUTED --> PLANNED
  ROUTED --> EXECUTING
  PLANNED --> EXECUTING
  PLANNED --> BLOCKED
  EXECUTING --> VERIFYING
  EXECUTING --> BLOCKED
  EXECUTING --> FAILED
  VERIFYING --> REVIEWING
  VERIFYING --> REPAIRING
  VERIFYING --> FAILED
  REVIEWING --> ASSURING
  REVIEWING --> BLOCKED
  REVIEWING --> REPAIRING
  ASSURING --> PARTIAL
  ASSURING --> BLOCKED
  EXECUTING --> CANCELLED
  BLOCKED --> ROUTED: authority/tool change
  FAILED --> ROUTED: new run
  ASSURING --> PASSED
  PARTIAL --> REPAIRING: bounded repair
  PARTIAL --> DELIVERED: limitations recorded
  REPAIRING --> VERIFYING
  REPAIRING --> FAILED
  BLOCKED --> PLANNED
  BLOCKED --> FAILED
  PASSED --> DELIVERED
  DELIVERED --> [*]
  CANCELLED --> [*]
